--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- header start -->
     <header>
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
@@ -38,11 +39,30 @@
                 <button class="btn-primary">Explore More</button>
 
             </div>
-            <img src="images/banner.png" alt="">
+            <img class="banner-image" src="images/banner.png" alt="">
         </div>
 
     </header>
+
+    <!-- header end -->
     <main>
+        <!-- teams  section -->
+        <section class="team-container">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+            <div class="team-content">
+                <h3 class="team-content-title"><span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-freatures">Features</span> </h3>
+                <p class="team-content-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+
+        </section>
 
     </main>
 
