--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
 
         </section>
 
+        <!-- features section start -->
+        <section class="features">
+
+        </section>
+
+        <!-- facts section  -->
+
+        <section class="facts">
+            <h3 class="banner-title">Some Facts</h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        </section>
+
     </main>
 
     <footer>
