--- a/index.html
+++ b/index.html
@@ -66,6 +66,35 @@
 
         <!-- features section start -->
         <section class="features">
+            <div class="feature-content">
+                <h3 class="features-title">Features you will <br> love & enjoy</h3>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+            <div class="feature-image">
+                <img src="images/architect.png" alt="">
+                <div class="tenyears">
+                    <h2>10+ years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
 
         </section>
 
@@ -74,6 +103,43 @@
         <section class="facts">
             <h3 class="banner-title">Some Facts</h3>
             <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title quick-list">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1485</h2>
+                    <p class="card-title quick-list">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-stats">590</h2>
+                    <p class="card-title quick-list">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-stats">22578</h2>
+                    <p class="card-title quick-list">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- sponsor section  -->
+        <section class="sponsors">
+            <h3 class="banner-title">Our Sponspors</h3>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <div class="sponsors-image-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+
+            </div>
         </section>
 
     </main>
